2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-05
	* adjust to new XMAS-ready version of Utilties/WebGUI

2007-08-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-07-04
	* FUResource.cc uses board_sense to avoid crash when running with fake data (inconsistent GTFE block)

	
2007-08-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-07-03
	* Modified FUResource to set event number using 32-bit trigger no. from GTP Daq record
	
2007-06-06  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-02
	* First pass modifications for xdaq 3.9 (mainly include paths of xdaq headers)
	
2007-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01
	* yet another bug fix which prevented a clean stop from time to
	time. But I am getting there ...

2007-05-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* requires EventFilter/ShmBuffer V00-04-00
	* add std::queue<uint> FUShmResourceTable::freeResourceIds_;
	FUShmResourceTable::allocateResource draws an id from it, but
	doesn't call FUResource::allocate(cell) yet; only upon receiving
	the first data msg from the BU will allocate be called and thus
	the shm lock be taken. Thus, the pending requests block maximally
	one shm (write-raw) lock.
	* this design fixes the halting/stopping problem, where no locks
	were available to post the ZERO event upon RB shut-down.

2007-05-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-14
	* have I finally fixed the syncronization properly? We'll see ...

2007-05-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-13
	* protect FUResourceTable::nbPending_ by lock()/unlock() when
	being incremented.

2007-05-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-12
	* possibly fixed the dead-lock problem: instead of locking both
	the application- and monitor-infospace via
	WebBUI::lockInfoSpaces() [dangerous!], only lock the