@@ -1,3 +1,12 @@
+2007-09-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-07-06
+	* add parameter 'reasonForFailed'
+	* FUResourceTable: throw an exception if the creation of the
+	shared memory segment fails
+	* therefore, FUResourceBroker now correctly goes to 'FAILED' state
+	in this scenario
+
 2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-07-05
